# arkion_cert-inventory-platform

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql
backend/src/: main.rs
docs/: system-design.md
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/app/inventory/: page.tsx
